# py-autonomous-agent

./: README.md  claude.md  pyproject.toml
agent/: claude_bridge.py  cli.py  core.py  db.py  knowledge.py  mcp.py  skills_config.py  tech_stack.py
agent/skills/: __init__.py  coder.py  shipper.py  tester.py
agent/subagents/: __init__.py  executor.py  planner.py  reviewer.py
